# SpotGridBot

./: CMakeLists.txt  CONNECTION_ARCHITECTURE_DIAGRAM.md  CONNECTION_REFACTORING_SUMMARY.md  CurrencyConfig.xml  README.md  README_COINBASE_WEBSOCKET_ORDERS.md  WEBSOCKET_ORDERS_QUICKSTART.md  WEBSOCKET_ORDER_UPDATES.md  config.xml  logging.properties
include/: ActiveQuoteTable.h  ConnectionBase.h  ConnectionBaseMD.h  ConnectionBaseORD.h  ConnectionManager.h  Logger.h  OrderManager.h  SchemaDefs.h
include/OKX/: ConnectionMD.h
include/binance/: ConnectionMD.h
include/coinbase/: ConnectionMD.h  ConnectionORD.h  ConnectionORDWS.h  JWTGenerator.h  helper_functions.h
lib/gridbot/: CMakeLists.txt
lib/gridbot/include/: GridConfig.h  GridStrategy.h  IOrderManager.h  gridstrategy.h
lib/gridbot/src/: GridConfig.cpp  GridStrategy.cpp  gridstrategy.cpp
lib/orderbook/: CMakeLists.txt
lib/orderbook/include/OrderBook/: BookView.h  OrderBook.h
lib/orderbook/src/: OrderBook.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/Utils/: ContextBase.h  FixTypes.h
lib/utils/src/: FixTypes.cpp
src/: ActiveQuoteTable.cpp  CMakeLists.txt  ConnectionBase.cpp  ConnectionBaseMD.cpp  ConnectionBaseORD.cpp  ConnectionManager.cpp  OrderManager.cpp  RestBase.cpp  SpotGridBot  main.cpp
src/OKX/: ConnectionMD.cpp
src/binance/: ConnectionMD.cpp
src/coinbase/: ConnectionMD.cpp  ConnectionORD.cpp  ConnectionORDWS.cpp
tests/: CMakeLists.txt
